Added my configuration files.

--- a/.gitignore
+++ b/.gitignore
@@ -54,7 +54,7 @@
 /src/read_ctrl.lex
 
 # /tools/
-/tools/pyorac/local_defaults.py
+#/tools/pyorac/local_defaults.py
 /tools/__pycache__
 /tools/*.pyc
 /tools/pyorac/__pycache__
