Updated settings to compile on matin.

--- a/.gitignore
+++ b/.gitignore
@@ -54,8 +54,12 @@
 /src/read_ctrl.lex
 
 # /tools/
-/tools/pyorac/local_defaults.py
+#/tools/pyorac/local_defaults.py
 /tools/__pycache__
 /tools/*.pyc
 /tools/pyorac/__pycache__
 /tools/pyorac/*.pyc
+
+# PyCharm
+/.idea
+
